--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
   <color name="white">#FFFFFFFF</color>
   <color name="tailspurple">#E4D7E6</color>
   <color name="tailswhite">#EBEBEB</color>
+  <color name="tailsordertype">#4A74D5</color>
 
 
 </resources>
