--- a/app/src/main/res/layout/activity_employee_list.xml
+++ b/app/src/main/res/layout/activity_employee_list.xml
@@ -4,12 +4,31 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".EmployeeListActivity">
+  tools:context=".employee_list_activity.EmployeeListActivity">
+
+  <ImageView
+      android:id="@+id/imageView3"
+      android:layout_width="288dp"
+      android:layout_height="432dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/spinnerFilter"
+      app:layout_constraintVertical_bias="0.133"
+      app:srcCompat="@drawable/img_2" />
+
+  <ImageView
+      android:id="@+id/imageView2"
+      android:layout_width="364dp"
+      android:layout_height="363dp"
+
+      app:layout_constraintBottom_toBottomOf="@+id/employeeList_recyclerView"
+      app:layout_constraintStart_toStartOf="@+id/employeeList_recyclerView"
+      app:srcCompat="@drawable/img_1" />
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/employeeList_recyclerView"
-      android:layout_width="413dp"
-      android:layout_height="495dp"
+      android:layout_width="411dp"
+      android:layout_height="470dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
