--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -6,25 +6,34 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonRegister"
         android:layout_width="206dp"
         android:layout_height="60dp"
-        android:text="Продолжить"
-        android:textColor="#000"
+        android:text="Создать аккаунт"
+        android:textColor="@color/tailswhite"
         android:textColorLink="#AEC3FB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.757" />
+        app:layout_constraintVertical_bias="0.9" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ellipse_11" />
 
     <EditText
-        android:id="@+id/editTextPhone"
+        android:id="@+id/editTextName"
+        style="@style/register_text_input"
         android:layout_width="223dp"
         android:layout_height="50dp"
         android:ems="10"
-        android:hint="Введите номер телефона"
-        android:inputType="phone"
+        android:hint="  Имя"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
@@ -32,13 +41,75 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.336" />
 
+    <EditText
+        style="@style/register_text_input"
+        android:id="@+id/editTextSurname"
+        android:layout_width="223dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:hint="  Фамилия"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextName"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <EditText
+        android:id="@+id/editTextLogin"
+        style="@style/register_text_input"
+        android:layout_width="223dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:hint="  Логин"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSurname"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <EditText
+        style="@style/register_text_input"
+        android:id="@+id/editTextPassword"
+        android:layout_width="223dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:hint="  Пароль"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="156dp"
+        android:layout_height="38dp"
+        android:fontFamily="@font/noto_sans"
+        android:text="Регистрация"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="397dp"
-        android:layout_height="253dp"
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="49dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextName"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img" />
+        app:srcCompat="@drawable/bone" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -56,5 +127,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img_2" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
