--- a/app/src/main/res/layout/sort_spinner_row.xml
+++ b/app/src/main/res/layout/sort_spinner_row.xml
@@ -9,6 +9,7 @@
         android:id="@+id/sort_image"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:paddingStart="5dp"
         android:paddingEnd="5dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
